<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Dr Rescribe</string>
    <string name="enter_mobile_no">Mobile No. *</string>
    <string name="enter_mobile_no_alt_phn">Alternate Mobile No.</string>
    <string name="enter_mobile_no_error">Mobile No.</string>
    <string name="enter_ref_mobile_no">Mobile No.</string>
    <string name="log_in">Login</string>
    <string name="enter_full_name">Name</string>
    <string name="enter_email_id">Email</string>
    <string name="enter_details">Description</string>
    <string name="internet">Please check your Internet Connection</string>
    <string name="timeout">Timeout error</string>
    <string name="break_fast">BREAKFAST</string>
    <string name="mlunch">LUNCH</string>
    <string name="msnacks">SNACKS</string>
    <string name="time_select_err">Please select time slot.</string>
    <string name="token_select_time_err_msg">Please select future time slot for the day.</string>
    <string name="mdinner">DINNER</string>
    <string name="consultation_details">Consultation Details</string>
    <string name="resend_in_text">Resend in</string>
    <string name="resend"><u>Resend OTP</u></string>
    <string name="ok">OK</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_confirmation">Sign Up Confirmation</string>
    <string name="logout">Logout</string>
    <string name="need_some_help">Need some help?</string>
    <string name="feel_free">Feel free to get in touch with us</string>
    <string name="call">CALL</string>
    <string name="email">EMAIL</string>
    <string name="notification">Notification</string>
    <string name="roboto_bold">roboto_bold.ttf</string>
    <string name="roboto_medium">roboto_medium.ttf</string>
    <string name="roboto_regular">roboto_regular.ttf</string>
    <string name="bill_invoices">Bill Invoices</string>
    <string name="case_encounter">Case Encounter</string>
    <string name="gallery">Gallery</string>
    <string name="files">Files</string>
    <string name="adddocs">Add Documents</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter">Enter&#160;</string>
    <string name="read_more"><u>More</u></string>
    <string name="read_less">&#160;<u>
        less</u></string>
    <string name="done">Done</string>
    <string name="others">Others</string>
    <string name="practices_at_locations">Practices at $$ locations</string>
    <string name="prescriptionModels">Prescriptions</string>
    <string name="title_activity_zoomview">Zoom View</string>
    <string name="type">type</string>
    <string name="investigations">Investigations</string>
    <string name="name">Name</string>
    <string name="details">&#160;Details</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_password_header">Forgot Password</string>
    <string name="message_for_mobile_otp">Please input the OTP received on your Mobile No.&#160; %1$s</string>
    <string name="message_forgot_password">Please provide your email id to access the reset password link.</string>
    <string name="message_social_login_confirm_mobile_no_password">Please input your mobile no. and password.</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="err_email_invalid">Enter valid email.</string>
    <string name="err_ref_email_invalid">Enter valid referred email.</string>
    <string name="err_otp_invalid">Enter valid OTP</string>
    <string name="err_maximum_otp_retries">You have exceeded maximum retry of OTP generation, please try after sometime.</string>
    <string name="err_invalid_mobile_no">Enter valid mobile no.</string>
    <string name="err_invalid_alter_mobile_no">Enter valid alternate mobile no.</string>
    <string name="err_invalid_ref_mobile_no">Enter valid referred mobile no.</string>
    <string name="enter_password">Password</string>
    <string name="error_too_small_password">Password should be 6 characters long.</string>
    <string name="title">Title</string>
    <string name="server_error">Server Error</string>
    <string name="add_caption">Add Caption</string>
    <string name="enter_otp_for_login">Otp For Login</string>
    <string name="your_health">\"Your Own Healthcare Repository\"</string>
    <string name="using_otp">Using OTP</string>
    <string name="google_maps_key">AIzaSyBtI5h1jCRJZFXQowkuglxMtNYPURtHX5M</string>
    <string name="profile_exists">User\'s profile is already exist!!</string>
    <string name="enter_otp_no">Enter otp received on your mobile no.</string>
    <string name="login_with_gmail">Login with gmail</string>
    <string name="login_with_facebook">Login with facebook</string>
    <string name="facebook_app_id">1351340758298095</string>
    <string name="fb_login_protocol_scheme">fb1351340758298095</string>
    <string name="login_confirmation">Login Confirmation</string>
    <string name="dummy_full">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="dummy_normal">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="patient_connect">Patient Connect</string>
    <string name="search">Search</string>
    <string name="pick_speciality">Pick Speciality</string>
    <string name="details_note"><![CDATA[Your details will remain 100% private & secure. If you think you have medical emergency, contact your doctor immediately.]]></string>
    <string name="cardiologist">cardiologist</string>
    <string name="ophthalmologist">ophthalmologist</string>
    <string name="gastro">gastro</string>
    <string name="physiotherapist">physiotherapist</string>
    <string name="orthopaedic">orthopaedic</string>
    <string name="ent">ent</string>
    <string name="dentist">dentist</string>
    <string name="gynecologist">gynecologist</string>
    <string name="paediatric">paediatric</string>
    <string name="parse_error">parse error</string>
    <string name="no_connection_error">Internal server error</string>
    <string name="default_error">default error</string>
    <string name="dermatologist">dermatologist</string>
    <string name="neurologist">neurologist</string>
    <string name="physician">physician</string>
    <string name="psychiatrist">psychiatrist</string>
    <string name="oncologist">oncologist</string>
    <string name="urologist">urologist</string>
    <string name="nephrologist">nephrologist</string>
    <string name="surgeon">surgeon</string>
    <string name="endocrinologist">endocrinologist</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="type_a_message">Type a message</string>
    <string name="doc_viewer_not_found">Document viewer not found.</string>
    <string name="timing"><![CDATA[< slide to cancel]]></string>
    <string name="cancel">Cancel</string>
    <string name="do_you_exit">Do you want to exit ?</string>
    <string name="title_activity_location_picker">Location Picker</string>
    <string name="apply">Apply</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="sorting">Sorting</string>
    <string name="sort">Sort by</string>
    <string name="choose_one_option">Choose one option</string>
    <string name="gender">Gender</string>
    <string name="select_gender">Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="age_err_msg">Age should not be grater than 100.</string>
    <string name="less">less</string>
    <string name="equal">equal</string>
    <string name="greater">greater</string>
    <string name="less_than_sign"><![CDATA[<]]></string>
    <string name="greater_than_sign"><![CDATA[>]]></string>
    <string name="age_range">Age Range</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="select_city">Select City</string>
    <string name="welcome">Welcome,</string>
    <string name="appointment_status">Appointment Status</string>
    <string name="select_status">Select Status</string>
    <string name="clinic_names">Clinic Names</string>
    <string name="select_clinic">Select Clinic</string>
    <string name="search_hint"><![CDATA[Search by Name, Phone & Patient ID]]></string>
    <string name="search_hint_patientconnect_to_mypatient"><![CDATA[Search by Name & Patient ID]]></string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="app_logo">AppLogo</string>
    <string name="settings">Settings</string>
    <string name="support">Support</string>
    <string name="outstanding_amount">O/S Amount:</string>
    <string name="id">ID:</string>
    <string name="opd_appointment">Appointment</string>
    <string name="nil">NIL</string>
    <string name="book">book</string>
    <string name="booked">Booked</string>
    <string name="booked_for">Booked for</string>
    <string name="completed">completed</string>
    <string name="capitalcompleted">Completed</string>
    <string name="file_extension">file_extension</string>
    <string name="title_activity_selected_docs">Selected Documents</string>
    <string name="appointments">Appointments</string>
    <string name="normalRange">normal</string>
    <string name="moderateRange">Moderate</string>
    <string name="severeRange">Severe</string>
    <string name="select_all">Select All</string>
    <string name="bulk_cancel">Bulk Cancel</string>
    <string name="send_sms">Send SMS</string>
    <string name="waiting_list">Waiting List</string>
    <string name="bp_max">BpMax</string>
    <string name="bp">BP</string>
    <string name="colon_sign">:</string>
    <string name="bp_min">BpMin</string>
    <string name="dash">-</string>
    <string name="systolic_pressure">Systolic BP</string>
    <string name="diastolic_pressure">Diastolic BP</string>
    <string name="normal">Normal Level :</string>
    <string name="moderate">Moderate Level :</string>
    <string name="severe">Severe Level :</string>
    <string name="noncategory">Other Level :</string>
    <string name="please_select_patients">Please select patients</string>
    <string name="my_patients">My Patients</string>
    <string name="do_you_logout">Do you want to logout?</string>
    <string name="transgender">Transgender</string>
    <string name="add_record">Add Records</string>
    <string name="select_doctor_name">Doctor Name</string>
    <string name="select_date_text">Select Date</string>
    <string name="enter_date">Enter Date</string>
    <string name="enter_address">Enter Address</string>
    <string name="address_details">Address Details</string>
    <string name="address_line">Address line1</string>
    <string name="address_line2">Address line2</string>
    <string name="skip">Skip</string>
    <string name="do_you_want_to_restore_backup">Do you want to restore backup?</string>
    <string name="confirm">Confirm</string>
    <string name="setting_size_step1">Setting Size Step1</string>
    <string name="medicine_type">Medicine Type</string>
    <string name="breakfast">Breakfast</string>
    <string name="medicine_name">Medicine Name</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="dose">Dose</string>
    <string name="days">Days</string>
    <string name="instruction">Instruction</string>
</resources>