<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp10"
        android:layout_marginRight="@dimen/dp10"
        android:background="@color/white"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp10"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/ic_info_outline_24dp" />

        <TextView
            android:id="@+id/textview_sucess"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/do_you_exit"
            android:padding="@dimen/dp10" />
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
        <Button
            android:id="@+id/button_cancel"
            android:layout_width="0dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/dp8"
            android:background="@color/tagColor"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/white" />
    <Button
        android:id="@+id/button_ok"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:layout_weight="1"
        android:layout_marginLeft="@dimen/dp2"
        android:layout_marginTop="@dimen/dp8"
        android:background="@color/tagColor"
        android:gravity="center"
        android:text="@string/ok"
        android:textColor="@color/white" />
</LinearLayout>

    </LinearLayout>
</RelativeLayout>